// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home - SignInForm should match snapshot 1`] = `
<div>
  <div
    class="MuiBox-root css-1k9ek97"
  >
    <form
      data-testid="sign-in-form-main"
      novalidate=""
    >
      <div
        class="MuiBox-root css-1y5sho6"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 css-vgc9m1-MuiTypography-root"
        >
          Sign In
        </h5>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            for="username"
            id="username-label"
          >
            Email Address
          </label>
          <div
            class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-describedby="username-helper-text"
              aria-invalid="false"
              autocomplete="username"
              class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
              data-testid="sign-in-form-username"
              id="username"
              name="username"
              placeholder="Enter Email Address"
              type="email"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1z7n62"
              >
                <span>
                  Email Address
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-15h6cqt-MuiFormHelperText-root"
            id="username-helper-text"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            for="password"
            id="password-label"
          >
            Password
          </label>
          <div
            class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-describedby="password-helper-text"
              aria-invalid="false"
              autocomplete="current-password"
              class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
              data-testid="sign-in-form-password"
              id="password"
              name="password"
              placeholder="Enter Password"
              type="password"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1z7n62"
              >
                <span>
                  Password
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-15h6cqt-MuiFormHelperText-root"
            id="password-helper-text"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-1lxfmiw"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/forgot-password?email="
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1mp4c1a-MuiTypography-root"
              data-testid="forgot-password-button"
            >
              Forgot Password?
            </span>
          </a>
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
            data-testid="sign-in-form-button"
            tabindex="0"
            type="submit"
          >
            Sign In
          </button>
        </div>
      </div>
    </form>
    <div
      class="MuiBox-root css-1846o0a"
    >
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
      />
    </div>
    <div
      class="MuiBox-root css-tarbwi"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18kuvg9-MuiTypography-root"
      >
        New to Reece online?
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
      >
        Registering for online access is easy.
      </p>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
        href="/register"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-kf26p3-MuiTypography-root"
          data-testid="sign-up-button"
        >
          Sign up now
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Home - SignInForm username/password input and submit test 1`] = `
<div>
  <div
    class="MuiBox-root css-1k9ek97"
  >
    <form
      data-testid="sign-in-form-main"
      novalidate=""
    >
      <div
        class="MuiBox-root css-1y5sho6"
      >
        <h5
          class="MuiTypography-root MuiTypography-h5 css-vgc9m1-MuiTypography-root"
        >
          Sign In
        </h5>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            for="username"
            id="username-label"
          >
            Email Address
          </label>
          <div
            class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-describedby="username-helper-text"
              aria-invalid="false"
              autocomplete="username"
              class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
              data-testid="sign-in-form-username"
              id="username"
              name="username"
              placeholder="Enter Email Address"
              type="email"
              value="user@email.com"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1z7n62"
              >
                <span>
                  Email Address
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled css-15h6cqt-MuiFormHelperText-root"
            id="username-helper-text"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
        >
          <label
            class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            for="password"
            id="password-label"
          >
            Password
          </label>
          <div
            class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
          >
            <input
              aria-describedby="password-helper-text"
              aria-invalid="false"
              autocomplete="current-password"
              class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
              data-testid="sign-in-form-password"
              id="password"
              name="password"
              placeholder="Enter Password"
              type="password"
              value="Password1"
            />
            <fieldset
              aria-hidden="true"
              class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1z7n62"
              >
                <span>
                  Password
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled css-15h6cqt-MuiFormHelperText-root"
            id="password-helper-text"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </p>
        </div>
        <div
          class="MuiBox-root css-1lxfmiw"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/forgot-password?email=user%40email.com"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-1mp4c1a-MuiTypography-root"
              data-testid="forgot-password-button"
            >
              Forgot Password?
            </span>
          </a>
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1egkuzh-MuiButtonBase-root-MuiButton-root"
            data-testid="sign-in-form-button"
            tabindex="0"
            type="submit"
          >
            Sign In
          </button>
        </div>
      </div>
    </form>
    <div
      class="MuiBox-root css-1846o0a"
    >
      <hr
        class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
      />
    </div>
    <div
      class="MuiBox-root css-tarbwi"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18kuvg9-MuiTypography-root"
      >
        New to Reece online?
      </h5>
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-19m3wr6-MuiTypography-root"
      >
        Registering for online access is easy.
      </p>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
        href="/register"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 css-kf26p3-MuiTypography-root"
          data-testid="sign-up-button"
        >
          Sign up now
        </span>
      </a>
    </div>
  </div>
</div>
`;
